fixes text-overflow; text is not going to break its container

--- a/src/components/MTAHeadline.css
+++ b/src/components/MTAHeadline.css
@@ -1,11 +1,10 @@
 .flow-text {
-    display: flex;
+    /*display: flex;
     flex: 0 0 auto;
     position:relative;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    transition: 0.3s;
-    white-space: nowrap;
+    white-space: nowrap;*/
+    overflow:hidden;
+    transition: 0.1s;
 }
 
 .flow-wrap {
